# barter-mono

./: .env.sample  .gitignore  Cargo.toml
barter-data-rs/: Cargo.toml
barter-data-rs/examples/: uniswapx_trades.rs
barter-data-rs/src/: event.rs  lib.rs
barter-data-rs/src/dex/: mod.rs
barter-data-rs/src/dex/uniswapx/: mod.rs
barter-data-rs/src/exchange/binance/: channel.rs
barter-data-rs/src/subscription/: account_update.rs  mod.rs  rfq_request.rs
barter-execution-rs/: Cargo.toml
barter-execution-rs/examples/: binance_execution_client.rs  binance_trade.rs
barter-execution-rs/src/: error.rs  lib.rs
barter-execution-rs/src/execution/: mod.rs
barter-execution-rs/src/execution/binance/: connection.rs  mod.rs  websocket.rs
barter-execution-rs/src/execution/uniswapx/: connection.rs  mod.rs  requests.rs
barter-execution-rs/src/model/: execution_event.rs  mod.rs  position.rs  trade.rs
barter-execution-rs/tests/: simulated_exchange.rs
barter-integration-rs/: Cargo.toml
barter-integration-rs/src/: de.rs  lib.rs
barter-integration-rs/src/model/: mod.rs
barter-rs/: Cargo.toml
barter-rs/examples/: cerebrum_binance.rs  cerebrum_simulation.rs  engine_with_erc20_data.rs  engine_with_historic_book.rs  engine_with_uniswapx_orders.rs
barter-rs/src/cerebrum/: account.rs  exchange.rs  exchange_client.rs  market.rs
barter-rs/src/portfolio/: position.rs
barter-rs/src/strategy/: mod.rs
barter-rs/src/strategy/glft_mm/: mm.rs  mod.rs
uniswapx-quoter-rs/: Cargo.toml
uniswapx-quoter-rs/examples/: server.rs
uniswapx-quoter-rs/src/: mod.rs  quotes.rs
(+11 files in other folders)
