[package]
name = "uniswapx-quoter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

[dependencies]
poem = "2.0.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.196"
tokio = { version = "1", features = ["full", "rt-multi-thread", "sync"] }
uuid = "1.7.0"
warp = "0.3.6"

